{
  "version": 4,
  "terraform_version": "1.13.2",
  "serial": 6,
  "lineage": "39e7936f-60c1-d99a-9f60-b9bcb27f068f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "hemantheast",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0b09ffb6d8b58ca91",
            "arn": "arn:aws:ec2:us-east-1:730335232048:instance/i-0839dd34673909959",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0839dd34673909959",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "EAST@2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0ef040ee72b222c2a"
              }
            ],
            "primary_network_interface_id": "eni-0ef040ee72b222c2a",
            "private_dns": "ip-172-31-31-21.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.31.21",
            "public_dns": "ec2-54-82-109-225.compute-1.amazonaws.com",
            "public_ip": "54.82.109.225",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00d61b8620fca2b3d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "terraform-20250915175407608300000001"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-021dab293011cddd7",
            "tags": {
              "Name": "East server"
            },
            "tags_all": {
              "Name": "East server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e17adb51fa5245cd"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "730335232048",
            "id": "i-0839dd34673909959",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.HemanthSG1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "hemanthnorth",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-north-1",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0fd2b85ee2b4dc969",
            "arn": "arn:aws:ec2:eu-north-1:730335232048:instance/i-0ed54d57accb921e8",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ed54d57accb921e8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "LUNUX@2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0257828fe7b4abc7d"
              }
            ],
            "primary_network_interface_id": "eni-0257828fe7b4abc7d",
            "private_dns": "ip-172-31-40-48.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.40.48",
            "public_dns": "ec2-16-171-195-229.eu-north-1.compute.amazonaws.com",
            "public_ip": "16.171.195.229",
            "region": "eu-north-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-009cf5e6e5b5e6c79",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "terraform-20250915175407318200000001"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07b6f2b7b0dcae2e2",
            "tags": {
              "Name": "North server"
            },
            "tags_all": {
              "Name": "North server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0635c25e4d25c1c97"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "730335232048",
            "id": "i-0ed54d57accb921e8",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_security_group.HemanthSG2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "HemanthSG1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335232048:security-group/sg-0e17adb51fa5245cd",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0e17adb51fa5245cd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20250915175407608300000001",
            "name_prefix": "terraform-",
            "owner_id": "730335232048",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "east"
            },
            "tags_all": {
              "Name": "east"
            },
            "timeouts": null,
            "vpc_id": "vpc-0064101ba0f485669"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "730335232048",
            "id": "sg-0e17adb51fa5245cd",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "HemanthSG2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-north-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:730335232048:security-group/sg-0635c25e4d25c1c97",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0635c25e4d25c1c97",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20250915175407318200000001",
            "name_prefix": "terraform-",
            "owner_id": "730335232048",
            "region": "eu-north-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "north"
            },
            "tags_all": {
              "Name": "north"
            },
            "timeouts": null,
            "vpc_id": "vpc-031754afdc60901b0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "730335232048",
            "id": "sg-0635c25e4d25c1c97",
            "region": "eu-north-1"
          }
        }
      ]
    }
  ]
}